--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -49,7 +49,7 @@ jobs:
           mega-get "$url"
         done
     
-    - name: List files
+    - name: List downloaded files
       run: ls -la
 
     - name: Sanitize and upload files
@@ -57,7 +57,7 @@ jobs:
         shopt -s nullglob
         gh release create mega-downloads --title "mega-downloads" --notes "mega-downloads" || true
         for file in *; do
-          if [[ -f "$file" ]]; then
+          if [[ -f "$file" && "$file" != "README.md" && "$file" != ".github" && "$file" != ".gitignore" ]]; then
             # Extract file extension
             extension="${file##*.}"
             # Generate a random file name
