--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -52,7 +52,7 @@ jobs:
     - name: List downloaded files
       run: ls -la
 
-    - name: Sanitize and upload files
+    - name: Sanitize, split, and upload files
       run: |
         shopt -s nullglob
         gh release create mega-downloads --title "mega-downloads" --notes "mega-downloads" || true
@@ -71,11 +71,20 @@ jobs:
               new_name="${random_name}.${extension}"
             done
 
-            # Rename the file
-            mv "$file" "$new_name"
-            # Upload the file
-            echo "Uploading $new_name"
-            gh release upload "mega-downloads" "./$new_name" --clobber
+            # Check file size and split if larger than 2GB
+            if [ $(stat -c%s "$file") -gt $((2 * 1024 * 1024 * 1024)) ]; then
+              split -b 2G "$file" "${new_name}.part_"
+              for part in ${new_name}.part_*; do
+                echo "Uploading $part"
+                gh release upload "mega-downloads" "./$part" --clobber
+              done
+            else
+              # Rename the file
+              mv "$file" "$new_name"
+              # Upload the file
+              echo "Uploading $new_name"
+              gh release upload "mega-downloads" "./$new_name" --clobber
+            fi
           fi
         done
       env:
