--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -72,13 +72,15 @@ jobs:
             done
 
             # Check file size and split if larger than 2GB
-            if [ $(stat -c%s "$file") -gt $((2 * 1024 * 1024)) ]; then
-              split -b 2G "$file" "${new_name}.part_"
-              for part in ${new_name}.part_*; do
+            filesize=$(stat -c%s "$file")
+            if [ "$filesize" -gt 2000000000 ]; then
+              split -b 2000m "$file" "${file}."
+              for part in ${file}.*; do
                 # Ensure the correct file size and Content-Length are set
                 part_size=$(stat -c%s "$part")
-                echo "Uploading $part ($part_size bytes)"
-                gh release upload "mega-downloads" "./$part" --clobber
+                part_new_name="${new_name}.${part##*.}"
+                echo "Uploading $part ($part_size bytes) as $part_new_name"
+                gh release upload "mega-downloads" "./$part" --clobber --name "$part_new_name"
               done
             else
               # Rename the file
