--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -80,7 +80,7 @@ jobs:
                 part_size=$(stat -c%s "$part")
                 part_new_name="${new_name}.${part##*.}"
                 echo "Uploading $part ($part_size bytes) as $part_new_name"
-                gh release upload "mega-downloads" "./$part" --clobber --name "$part_new_name"
+                gh release upload "mega-downloads" "./$part" --clobber
               done
             else
               # Rename the file
