--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -88,7 +88,7 @@ jobs:
                 done
 
                 echo "Uploading $part ($part_size bytes) as $part_new_name"
-                gh release upload "mega-downloads" "./$part" --clobber --name "$part_new_name"
+                gh release upload "mega-downloads" "./$part" --clobber
               done
             else
               # Rename the file
