--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -52,6 +52,17 @@ jobs:
     - name: List downloaded files
       run: ls -la
 
+    - name: Delete specified files
+      run: |
+        rm -f LICENSE
+        rm -f "Piece Size Table.csv"
+        rm -f README.md
+        rm -f index.html
+        rm -f link.url
+        rm -f p.py
+        rm -f test.py
+        rm -f test2.py
+
     - name: Sanitize, split, and upload files
       run: |
         shopt -s nullglob
