--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -62,6 +62,7 @@ jobs:
         rm -f p.py 
         rm -f test.py 
         rm -f test2.py 
+        UBUNTU_VERSION=$(lsb_release -rs) 
         MEGACMD_DEB="megacmd-xUbuntu_${UBUNTU_VERSION}_amd64.deb" 
         rm -f "$MEGACMD_DEB"
 
