--- a/.github/workflows/mega-nz.yaml
+++ b/.github/workflows/mega-nz.yaml
@@ -32,11 +32,11 @@ jobs:
 
     - name: Install MEGAcmd
       run: |
-        sudo apt-get update
+        sudo apt-get update 
         sudo apt-get install -y wget lsb-release
-        UBUNTU_VERSION=$(lsb_release -rs)
-        wget "https://mega.nz/linux/repo/xUbuntu_${UBUNTU_VERSION}/amd64/megacmd-xUbuntu_${UBUNTU_VERSION}_amd64.deb"
-        sudo apt install -y "./megacmd-xUbuntu_${UBUNTU_VERSION}_amd64.deb"
+        UBUNTU_VERSION=$(lsb_release -rs) 
+        wget -P /tmp "https://mega.nz/linux/repo/xUbuntu_${UBUNTU_VERSION}/amd64/megacmd-xUbuntu_${UBUNTU_VERSION}_amd64.deb" 
+        sudo apt install -y "/tmp/megacmd-xUbuntu_${UBUNTU_VERSION}_amd64.deb"
 
     - name: Verify MEGAcmd installation
       run: mega-version
